--- a/YAZLAB2/Views/Etkinlik/Edit.cshtml
+++ b/YAZLAB2/Views/Etkinlik/Edit.cshtml
@@ -90,5 +90,5 @@
 
    <!-- Butonlar -->
     <button type="submit" class="btn btn-primary">Kaydet</button>
-   @*   <a href="@Url.Action("Index")" class="btn btn-secondary">Geri</a> *@
+    <a href="@Url.Action("Index", "Etkinlik")" class="btn btn-secondary">Geri</a>
 </form>
