--- a/YAZLAB2/Views/Etkinlik/Rota.cshtml
+++ b/YAZLAB2/Views/Etkinlik/Rota.cshtml
@@ -9,8 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewData["Title"]</title>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"> <!-- FontAwesome CDN -->
     <style>
+        body {
+            background-color: #6f42c1; /* Mavi mor arka plan */
+            color: white;
+        }
+
         #map {
             height: 500px;
             width: 100%;
@@ -18,19 +25,38 @@
 
         #info {
             margin-top: 20px;
-            text-align: center;
+            text-align: left;
+        }
+
+        .info-text {
+            margin-bottom: 15px;
+        }
+
+        .info-icon {
+            margin-right: 10px;
+        }
+
+        .container {
+            margin-top: 50px;
+        }
+
+        .back-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            z-index: 1; /* Butonun üstte görünmesini sağlar */
         }
     </style>
 </head>
 <body>
-    <div class="container mt-5">
-        <h2 class="text-center">Rota Hesaplama</h2>
+    <div class="container">
+        <h2 class="text-center mb-4">Rota Hesaplama</h2>
         <div id="map"></div>
         <div id="info">
-            <p>Mesafe: <span id="distance"></span> km</p>
-            <p>Araba: <span id="car-time"></span> saat</p>
-            <p>Bisiklet: <span id="bike-time"></span> saat</p>
-            <p>Yürüyüş: <span id="walk-time"></span> saat</p>
+            <p class="info-text"><i class="fas fa-route info-icon"></i>Mesafe: <span id="distance"></span> km</p>
+            <p class="info-text"><i class="fas fa-car info-icon"></i>Araba: <span id="car-time"></span> saat</p>
+            <p class="info-text"><i class="fas fa-bicycle info-icon"></i>Bisiklet: <span id="bike-time"></span> saat</p>
+            <p class="info-text"><i class="fas fa-walking info-icon"></i>Yürüyüş: <span id="walk-time"></span> saat</p>
         </div>
     </div>
 
@@ -48,7 +74,7 @@
             container: 'map',
             style: 'mapbox://styles/mapbox/streets-v11',
             center: [userLng, userLat],
-            zoom: 12
+            zoom: 6
         });
 
         // Kullanıcı başlangıç noktası için marker ekle
@@ -107,5 +133,7 @@
             })
             .catch(err => console.error('Rota alınırken hata oluştu:', err));
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"></script>
 </body>
 </html>
